--- a/payments.html
+++ b/payments.html
@@ -15,7 +15,7 @@
     <div class="payments-section">
       <div id="menu-bar-white">
         <h1><a class="nav-title-white" href="./index.html">EXP|CON</a></h1>
-        <div id="menu-white" onclick="onClickMenuWhite()">
+        <div id="menu-white" onclick="onClickMenu('white')">
           <div id="bar1-white" class="bar-white"></div>
           <div id="bar2-white" class="bar-white"></div>
           <div id="bar3-white" class="bar-white"></div>
