--- a/pricing.html
+++ b/pricing.html
@@ -14,7 +14,7 @@
 <body>
   <div id="menu-bar-black">
     <h1><a class="nav-title-black" href="./index.html">EXP|CON</a></h1>
-    <div id="menu-black" onclick="onClickMenuBlack()">
+    <div id="menu-black" onclick="onClickMenu('black')">
       <div id="bar1-black" class="bar-black"></div>
       <div id="bar2-black" class="bar-black"></div>
       <div id="bar3-black" class="bar-black"></div>
@@ -133,7 +133,7 @@
   <div class="pricing-bottom">
     <div id="menu-bar-red">
       <h1><a class="nav-title-red" href="./index.html">EXP|CON</a></h1>
-      <div id="menu-red" onclick="onClickMenuRed()">
+      <div id="menu-red" onclick="onClickMenu('red')">
         <div id="bar1-red" class="bar-red"></div>
         <div id="bar2-red" class="bar-red"></div>
         <div id="bar3-red" class="bar-red"></div>
