--- a/pricing.html
+++ b/pricing.html
@@ -12,20 +12,23 @@
 
 </head>
 <body>
-  <div id="menu-bar-black">
-    <h1><a class="nav-title-black" href="./index.html">EXP|CON</a></h1>
-    <div id="menu-black" onclick="onClickMenu('black')">
-      <div id="bar1-black" class="bar-black"></div>
-      <div id="bar2-black" class="bar-black"></div>
-      <div id="bar3-black" class="bar-black"></div>
+  <div class="menu-in-pricing">
+
+    <div id="menu-bar-black">
+      <h1><a class="nav-title-black" href="./index.html">EXP|CON</a></h1>
+      <div id="menu-black" onclick="onClickMenu('black')">
+        <div id="bar1-black" class="bar-black"></div>
+        <div id="bar2-black" class="bar-black"></div>
+        <div id="bar3-black" class="bar-black"></div>
+      </div>
+      <ul class="nav-black" id="nav-black">
+        <li><a href="#">WHAT IS IT</a></li>
+        <li><a href="#">PERKS</a></li>
+        <li><a href="#">PRICING</a></li>
+      </ul>
     </div>
-    <ul class="nav-black" id="nav-black">
-      <li><a href="#">WHAT IS IT</a></li>
-      <li><a href="#">PERKS</a></li>
-      <li><a href="#">PRICING</a></li>
-    </ul>
+    <div class="menu-bg-black" id="menu-bg-black"></div>
   </div>
-  <div class="menu-bg-black" id="menu-bg-black"></div>
   <div class="pricing-top">
     <div class="titles">
 
@@ -176,6 +179,6 @@
     <p>support@experienceconcerts.co</p>
   </div>
   <h1>EXP|CON</h1>
-  <p>2019 @ All Rights Reserved | Speer Technologies Incorporated</p>
+  <p class="copyright">2019 @ All Rights Reserved | Speer Technologies Incorporated</p>
 </footer>
 </html>
